# phanesim

./: .gitattributes  .gitignore  LICENSE  README.md  REUSE.toml  bootstrap.py  main.blend  main.blend.spdx  main.py  phanesim.py  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml  reuse.yml  spdx.yml
LICENSES/: AGPL-3.0-only.txt  BSD-3-Clause.txt
data/: hand.blend
data/finger_pose/training/: 0.csv  1.csv  2.csv  3.csv  note.md
data/finger_pose/validation/: 0.csv
data/hdri/: brown_photostudio_02_2k.exr
data/sequences/minimal/: cam_motion.csv  cam_motion1.csv  cam_motion_orbit.csv  hand_motion.csv  hand_motion_call.csv  hand_motion_fist.csv  hand_motion_pinch.csv  sequence.json  sequence_mono8.json  sequence_orbit_fist.json  sequence_pinch.json
data/textures/: human_male_albedo.png.spdx
data/wrist_elbow_pose/debug/: a.csv  chill.csv  straight_up.csv
data/wrist_elbow_pose/training/: 0.csv.dontuse  1.csv.dontuse  2_libsurvive_nov26.csv  3_libsurvive_nov26.csv
examples/minimal/: cam_motion.csv  camera.json  camera.json.spdx  hand.json  hand_motion.csv  project.json  rig.json  sequence.json
examples/minimal/output/cam_cam0/: joints_2d.csv
scripts/: check_spdx_headers.py
src/phanesim/: __init__.py  cli.py  motion.py  render.py  rig.py  skeleton.py  types.py  validate.py
src/phanesim/schemas/: camera.json  camhand_rig.json  defs.json  hand.json  project.json  project.json.spdx  sequence.json
tests/: conftest.py  test_motion.py  test_render.py  test_rig.py  test_types.py  test_validate.py
