# Copyright 2026, Mateo de Mayo.
# SPDX-License-Identifier: BSD-3-Clause

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phanesim"
version = "0.1.0"
description = "Synthetic dataset generator for computer vision"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.3",
]

[project.scripts]
phanesim = "phanesim:main"

[tool.setuptools]
py-modules = ["phanesim"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["phanesim"]

[dependency-groups]
dev = [
    "pyright>=1.1.409",
    "ruff>=0.15.11",
]
